[project]
name = "byteforge-converse-api-python"
version = "0.2.0"
authors = [
  { name="Jason Byteforge", email="jason@reallybadapps.com" },
]
description = "Python client for the ByteforgeConverse backend API"
keywords = ["byteforge", "converse", "llm", "client", "api"]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "O'Saasy License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "byteforge-converse-models @ git+https://github.com/jmazzahacks/byteforge-converse-models.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Required so the git+https direct reference to byteforge-converse-models is allowed.
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/byteforge_converse_api"]

[project.urls]
Homepage = "https://github.com/jmazzahacks/byteforge-converse-api-python"
Issues = "https://github.com/jmazzahacks/byteforge-converse-api-python/issues"
